Agregado H1 al index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>Hola Mundo</h1>
 <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur dolores a pariatur laudantium minima deserunt, quos quo exercitationem possimus, assumenda ipsam dolorem facere! Architecto reprehenderit consectetur tenetur? Alias, iure ipsa.</p>
 </body>
 </html>
